tests/e2e/not_allowed/not.error
Error: syntax error in story at line 1, column 1

1|    not = 1
      ^^^

E0030: `not` is reserved for future use
